CHANGES IN FLTK 1.1.11

	- Documentation fixes (STR #2410)
	- Fixed mouse wheel related crash in GLUT emulation (STR #2381)
	- Fixed missing architecture flags in OS X build (STR #2303)
	- Fixed menu and shortcut handling (STR #2243)

CHANGES IN FLTK 1.1.10

	- Documentation fixes (STR #2220, STR #2209, STR #1945, STR #1893)
	- Widgets now remove stale entries from the default callback
	  queue when they are deleted (STR #2302)
	- Fixed selection bug in Fl_Int_Input (STR #2292)
	- Fixed character set conversion functions (STR #2268)
	- Fixed image lib configure and fltk-config issues by backporting
	  the image lib and zlib configure code from FLTK 1.3 (STR #2203)
	- Updated the bundled libpng to v1.2.40 (released Sep. 10, 2009)
	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
	- Added Xft2 font lookup table (STR #2215)
	- Fixed X server lockup, if a modal dialog window is opened
	  while a menu is active (STR #1986)
	- Setting a default font for Xft (STR #2216)
	- Limited builds to 32-bit on OX S to stay compatible to Snow Leopard.
	  64 bit users should upgrade to FLTK 1.3 and above.
	- Fixed Windows compile bug with "#define USE_COLORMAP 0"
	  (STR #2241)
	- Fixed glibc 2.10 compiler problems (Fedora 11 and others)
	  with scandir() and strchr() (STR #2222)
	- Fixed OpenGL shared context handling (STR #2135)
	- Fixed gray-scale images with alpha channel (STR #2105)
	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
	- Added cast to Fl_Color in all Fluid code (STR #2206)
	- Fixed wrong identifier for special keys combined with 
	  modifier (STR #2196)
	- Fix for multiple popups, when dragging and calling fl_alert()
	  and friends from the callback (STR #2159)
	- Avoiding crashes for recursive common dialogs (this does not 
	  fix the issue at hand yet) (STR 2150)
	- Fluid printing used wrong colors under Windows (STR #2195)
	- Fixed bad system menu hadling in OS X (STR #2153)
	- Fixed File Input mouse pointer dragging (STR #2181)