@@ -318,25 +318,27 @@ if test "$echo_ldstaticflags" = "yes"; then
 fi
 
 if test "$echo_libs" = "yes"; then
-    echo $libdir/libfltk.a
+    USELIBS="$libdir/libfltk.a"
 
     if test x$use_forms = xyes; then
-        echo $libdir/libfltk_forms.a
+        USELIBS="$libdir/libfltk_forms.a $USELIBS"
     fi
 
     if test x$use_gl = xyes; then
-        echo $libdir/libfltk_gl.a
+        USELIBS="$libdir/libfltk_gl.a $USELIBS"
     fi
 
     if test x$use_images = xyes; then
-        echo $libdir/libfltk_images.a
+        USELIBS="$libdir/libfltk_images.a $USELIBS"
 
         for lib in fltk_jpeg fltk_png fltk_z; do
             if test -f $libdir/lib$lib.a; then
-                echo $libdir/lib$lib.a
+                USELIBS="$libdir/lib$lib.a $USELIBS"
             fi
 	done
     fi
+
+    echo $USELIBS
 fi
 
 #
